--- a/aview-app/src/Styles/contentCreator.css
+++ b/aview-app/src/Styles/contentCreator.css
@@ -7,8 +7,8 @@
     top: 2668px;
     
     font-weight: 700;
-    font-size: 64px;
-    line-height: 81px;
+    font-size: 48px;
+    line-height: 60px;
 
     color: #FFFFFF;
 
